; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_test.c_keyword_test.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_test.c_keyword_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@first_keyword = common dso_local global i8* null, align 8
@last_keyword = common dso_local global i8* null, align 8
@keywords = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [4 x i8] c"foo\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @keyword_test() #0 {
  %1 = alloca i8**, align 8
  %2 = call i32 (...) @init_keywords()
  %3 = load i8*, i8** @first_keyword, align 8
  %4 = call i32 @is_keyword_name(i8* %3)
  %5 = call i32 @assert(i32 %4)
  %6 = load i8*, i8** @last_keyword, align 8
  %7 = call i32 @is_keyword_name(i8* %6)
  %8 = call i32 @assert(i32 %7)
  %9 = load i8**, i8*** @keywords, align 8
  store i8** %9, i8*** %1, align 8
  br label %10

10:                                               ; preds = %20, %0
  %11 = load i8**, i8*** %1, align 8
  %12 = load i8**, i8*** @keywords, align 8
  %13 = call i8** @buf_end(i8** %12)
  %14 = icmp ne i8** %11, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %10
  %16 = load i8**, i8*** %1, align 8
  %17 = load i8*, i8** %16, align 8
  %18 = call i32 @is_keyword_name(i8* %17)
  %19 = call i32 @assert(i32 %18)
  br label %20

20:                                               ; preds = %15
  %21 = load i8**, i8*** %1, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i32 1
  store i8** %22, i8*** %1, align 8
  br label %10

23:                                               ; preds = %10
  %24 = call i8* @str_intern(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %25 = call i32 @is_keyword_name(i8* %24)
  %26 = icmp ne i32 %25, 0
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  %29 = call i32 @assert(i32 %28)
  ret void
}

declare dso_local i32 @init_keywords(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @is_keyword_name(i8*) #1

declare dso_local i8** @buf_end(i8**) #1

declare dso_local i8* @str_intern(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
